crates/sifr_python_parser/tests/snapshots/invalid_syntax@ann_assign_stmt_invalid_annotation.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/err/ann_assign_stmt_invalid_annotation.py
---
## AST

```
Module(
    ModModule {
        range: 0..63,
        body: [
            AnnAssign(
                StmtAnnAssign {
                    range: 0..11,
                    target: Name(
                        ExprName {
                            range: 0..1,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    annotation: Starred(
                        ExprStarred {
                            range: 3..7,
                            value: Name(
                                ExprName {
                                    range: 4..7,
                                    id: "int",
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 10..11,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    simple: true,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 12..26,
                    target: Name(
                        ExprName {
                            range: 12..13,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    annotation: Yield(
                        ExprYield {
                            range: 15..22,
                            value: Some(
                                Name(
                                    ExprName {
                                        range: 21..22,
                                        id: "a",
                                        ctx: Load,
                                    },
                                ),
                            ),
                        },
                    ),
                    value: Some(
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 25..26,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    simple: true,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 27..46,
                    target: Name(
                        ExprName {
                            range: 27..28,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    annotation: YieldFrom(
                        ExprYieldFrom {
                            range: 30..42,
                            value: Name(
                                ExprName {
                                    range: 41..42,
                                    id: "b",
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                    value: Some(
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 45..46,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    simple: true,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 47..51,
                    target: Name(
                        ExprName {
                            range: 47..48,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 50..51,
                            id: "y",
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
            Assign(
                StmtAssign {
                    range: 55..62,
                    targets: [
                        Name(
                            ExprName {
                                range: 55..58,
                                id: "int",
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            range: 61..62,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x: *int = 1
  |    ^^^^ Syntax Error: Starred expression cannot be used here
2 | x: yield a = 1
3 | x: yield from b = 1
  |


  |
1 | x: *int = 1
2 | x: yield a = 1
  |    ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | x: yield from b = 1
4 | x: y := int = 1
  |


  |
1 | x: *int = 1
2 | x: yield a = 1
3 | x: yield from b = 1
  |    ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | x: y := int = 1
  |


  |
2 | x: yield a = 1
3 | x: yield from b = 1
4 | x: y := int = 1
  |      ^^ Syntax Error: Expected a statement
  |
