crates/sifr_python_parser/tests/snapshots/invalid_syntax@ann_assign_stmt_missing_rhs.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/err/ann_assign_stmt_missing_rhs.py
---
## AST

```
Module(
    ModModule {
        range: 0..9,
        body: [
            AnnAssign(
                StmtAnnAssign {
                    range: 0..8,
                    target: Name(
                        ExprName {
                            range: 0..1,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 3..6,
                            id: "int",
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x: int =
  |         ^ Syntax Error: Expected an expression
  |
